--- a/adopteUnDev/Views/_ViewImports.cshtml
+++ b/adopteUnDev/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using adopteUnDev
 @using adopteUnDev.Models
+@using adopteUnDev.Models.DeveloperViewModel
+@using adopteUnDev.Models.ClientViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
